# discours-backend-next

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.txt  Dockerfile  README.md  __init__.py  app.json  dokku_config  main.py  nginx.conf.sigil  pyproject.toml  requirements.txt  server.py  settings.py
.gitea/workflows/: main.yml
.github/workflows/: deploy.yml
__init__.py/: input.graphql  type.graphql
alembic/: env.py
auth/: authenticate.py  identity.py  jwtcodec.py  resolvers.py  tokenstorage.py  usermodel.py  validations.py
cache/: cache.py  precache.py  revalidator.py  triggers.py  unread.py
docs/: features.md  follower.md  load_shouts.md  rating.md  reader.md
orm/: __init__.py  author.py  author_events.py  collection.py  community.py  draft.py  invite.py  notification.py  rating.py  rbac.py  reaction.py  shout.py  topic.py  user.py
resolvers/: __init__.py  author.py  author_events.py  bookmark.py  collab.py  community.py  draft.py  editor.py  feed.py  follower.py  notifier.py  proposals.py  pyrightconfig.json  rater.py  rating.py  reaction.py  reader.py  stat.py  topic.py  webhook.py
schema/: enum.graphql  input.graphql  mutation.graphql  query.graphql  type.graphql
schemas/: auth.graphql  core.graphql
services/: auth.py  cache.py  common_result.py  db.py  diff.py  event_listeners.py  exception.py  following.py  follows.py  logger.py  memorycache.py  notify.py  precache.py  pretopic.py  redis.py  rediscache.py  revalidator.py  schema.py  search.py  sentry.py  server.py  settings.py  triggers.py  unread.py  viewed.py  webhook.py
test/: test.json
tests/: conftest.py  query_follows_test.py  test_drafts.py  test_reactions.py  test_shouts.py  test_validations.py
utils/: diff.py  encoders.py  logger.py
